Trinket adaptations and section exercises for chapters 8, 9, 10 and 11

--- a/trinket/header.html
+++ b/trinket/header.html
@@ -1,4 +1,6 @@
- <div class="main-content">
+
+<div class="main-content">
+<!-- slr 11/4/2019: comment out the trinket stuff 
     <div class="nav-wrapper">
       <nav class="top-bar" data-topbar data-topbar data-options="is_hover: false">
         <ul class="title-area">
@@ -18,6 +20,8 @@
         </section>
       </nav>
     </div>
+end slr 11/4/2019 -->
+<!-- slr 11/4/2019 comment out the nav bar stuff
 <div class="booktoc contain-to-grid sticky">
   <nav class="top-bar" data-topbar role="navigation">
 
@@ -88,6 +92,9 @@
 
   </nav>
 </div>
+
+end slr 11/4/2019 -->
+
     <div class="bookchapter">
       <div class="row">
         <div class="columns small-12">
